<resources>
    <string name="app_name">UPlace</string>
    <string name="Dia_Horario_Local">Dia-Horario-Local</string>
    <string name="Dia_horario_local">Dia-Horario-Local</string>
    <string name="nome">Nome</string>
    <string name="faltas">Faltas</string>
    <string name="adicionar_materia">Adicionar Materia</string>
    <string name="remover_materia">Remover Materia</string>
    <string name="professor">Professor</string>
    <string name="carga_horaria">Carga horaria </string>
    <string name="erro_vazio">Campo vazio</string>
    <string name="erro_carga_horaria">Deve ser numero inteiro</string>
    <string name="leitor_QR">Leitor QR</string>
    <string name="lista_materias">Lista matérias</string>
    <string name="valor_QR">Nenhum QR detectado</string>
    <string name="login">Login:</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="entrar">Login</string>
    <string name="erro_email">Email deve ser do tipo id.uff.br</string>
    <string name="erro_senha">Senha deve ter entre 6 e 12 caracteres</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="logout">Logout</string>
    <string name="lista_amigos">Lista de amigos</string>
    <string name="pessoas_proximas">Usuarios proximos</string>
    <string name="cria_evento">Criar evento</string>
    <string name="lista_provas">Lista de provas</string>
    <string name="erro_numeros">Este campo não pode conter números</string>
    <string name="erro_tamanho">Este campo não pode ter mais que 28 caractéres </string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa_uff">Mapa UFF</string>
    <string name="mapa_lugares">Lugares</string>
    <string name="mapa_amigos">Amigos</string>
    <string name="check_in">Check in</string>
    <string name="perfil">Meu perfil</string>
    <string name="eventos">Eventos</string>
    <string name="pedidos_de_amizade">Pedidos de amizade</string>
    <string name="deseja_adicionar">Deseja adicionar</string>
    <string name="aos_seus_amigos">aos seus amigos?</string>
    <string name="sim">SIM</string>
    <string name="nao">Nao</string>
    <string name="voces_sao_amigos">Vocês agora são amigos!!!</string>
    <string name="informe_um_dia">INFORME AO MENOS UM DIA</string>
    <string name="ligue_seu_gps">Ligue seu GPS para acessar este recurso</string>
    <string name="permissoes_obrigatorias">Estas permissões são obrigatórias para utilizar recursos do app. Por favor garanta acesso.</string>
    <string name="nao_consegue_checkin">Não é possivel fazer Check In, pois está muito longe.</string>
    <string name="voce_esta_em">Você está em</string>
    <string name="evento_criado">Evento criado com sucesso!</string>
    <string name="informe_email_senha">Informe o email e senha corretamente.</string>
    <string name="login_sucesso">Login feito com sucesso!</string>
    <string name="autenticacao_falhou">Autenticacao falhou! Verifique se seu email e senha estão corretos.</string>
    <string name="verifique_seu_email">Verifique seu email para confirmação...</string>
    <string name="ocorreu_erro_cadastro">Ocorreu um erro no cadastro...</string>
    <string name="aguarde">Aguarde as informações serem carregadas...</string>
    <string name="sem_amigos">Você não possui amigos adicionados...</string>
    <string name="deseja_excluir_materia">Deseja excluir a matéria</string>
    <string name="materia_removida">Materia Removida!</string>
    <string name="prova_adicionada">Prova adicionada</string>
    <string name="pontos">Pontos</string>
    <string name="nenhum_usuario">Nenhum usuario encontrado nas suas proximidades...</string>
    <string name="comecou_amizade">Começou uma amizade com</string>
    <string name="erro_tamanho_local">Este campo não pode ter mais que 20 caractéres </string>
    <string name="erro_tamanho_ch">Este campo não pode ter mais que 3 caractéres </string>
    <string name="erro_tamanho_curso">Este campo não pode ter mais que 32 caractéres </string>
    <string name="erro_tamanho_evento_local">Este campo não pode ter mais que 50 caractéres </string>
    <string name="erro_tamanho_evento_descricao">Este campo não pode ter mais que 140 caractéres </string>
    <string name="procurando_lugares">Procurando lugares próximos, aguarde...</string>
    <string name="data">Data</string>
    <string name="local">Local</string>
    <string name="organizador">Organizador</string>
    <string name="descreva_evento">Descreva seu evento</string>
    <string name="adicionar_evento">Adicionar Evento</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sabado</string>
    <string name="iduff">nome@id.uff.br</string>
    <string name="desafio_semanal">Desafio Semanal</string>
    <string name="atualizacoes_amigos">Atualizações de Amigos</string>
    <string name="adicionar_aos_amigos">Adicionar aos amigos</string>
    <string name="Ver_mais">Ver mais</string>
    <string name="procurando_usuarios">Procurando usuários próximos, aguarde...</string>
    <string name="nome_da_materia">Nome da matéria</string>
    <string name="nota">Nota</string>
    <string name="adicionar_prova">Adicionar prova</string>
    <string name="mudar_avatar">Mudar Avatar</string>
    <string name="badges_destaque">Badges em destaque</string>
    <string name="curso">Curso</string>
    <string name="concluir">Concluir</string>
    <string name="nome_do_professor">Nome do professor</string>
    <string name="seg">SEG</string>
    <string name="inicio">INÍCIO</string>
    <string name="fim">FIM</string>
    <string name="ter">TER</string>
    <string name="qua">QUA</string>
    <string name="qui">QUI</string>
    <string name="sex">SEX</string>
    <string name="sab">SAB</string>
    <string name="criar_materia">Criar Matéria</string>
    <string name="nome_evento">Nome do evento</string>
    <string name="adicionar_nova_prova">Adicionar nova prova</string>
    <string name="adicionar_falta">Adicionar falta</string>
    <string name="faltas_permitidas">Faltas permitidas:</string>
    <string name="titulo">Titulo (P1, P2, VR, VS)</string>
    <string name="nao_possui_provas">Você não possui provas cadastradas</string>
    <string name="materia_modificada">Materia modificada</string>
    <string name="editar_materia">Editar matéria</string>
    <string name="corrija_os_erros">Corrija os erros</string>
    <string name="buscar">Use o iduff</string>
    <string name="busca">Buscar</string>
</resources>

