<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_perfil"
        android:title="@string/perfil"
        />

    <item
        android:id="@+id/menu_editar_perfil"
        android:title="@string/editar_perfil"
        />

    <item
        android:id="@+id/menu_busca"
        android:title="@string/busca"
        />

    <item
        android:id="@+id/menu_lista_amigos"
        android:title="@string/lista_amigos"
        />

    <item
        android:id="@+id/menu_lista_pedidos"
        android:title="@string/pedidos_de_amizade"
        />

    <item
        android:id="@+id/menu_lista_materias"
        android:title="@string/lista_materias"
        />

    <item
        android:id="@+id/menu_cria_evento"
        android:title="@string/cria_evento"
        />

    <item
        android:id="@+id/menu_mapa_uff"
        android:title="@string/mapa_uff"
        />

    <item
        android:id="@+id/menu_pessoas_proximas"
        android:title="@string/pessoas_proximas"
        />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        />

</menu>