<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/perfil_main"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/login_fundo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_fundo"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/main_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    tools:srcCompat="@tools:sample/avatars[6]" />

                <TextView
                    android:id="@+id/main_nome_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    tools:text="@tools:sample/full_names[100]" />
                <!--android:layout_marginLeft="@id/main_avatar"-->
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/perfil_main"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/tv_main_evento_semanal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/desafio_semanal"
                    android:textSize="50sp" />
                <TextView
                    android:id="@+id/textViewEventos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5sp"
                    android:gravity="center"
                    android:text="@string/eventos"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_main2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/titulo_att"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5sp"
                    android:gravity="center"
                    android:text="@string/atualizacoes_amigos"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>

        <!--  ANTIGO LAYOUT
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titulo_att"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atualizacoes_amigos"
                    android:layout_margin="5sp"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ListView
                        android:id="@+id/main_lista_atualizacoes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </ListView>

                </LinearLayout>



                <ListView
                    android:id="@+id/main_lista_eventos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </ListView>

            </LinearLayout>




        </ScrollView>
-->


    </LinearLayout>



</RelativeLayout>

